--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
-    "react-sticky": "^6.0.1"
+    "react-sticky-el": "^1.0.13"
   },
   "devDependencies": {
     "react-scripts": "1.0.17"
